fix: implement brand attribute in both SolarPanelDTO & SolarPanelStatsDTO